# roscode_example

./: .gitignore  ros2_python_node.py  智能充电桩机器人”开放性实验启动说明 2ee7746e430a80d5aa73cfc9394b8deb.md
chapt1_ws/src/python_face_interface/: CMakeLists.txt  package.xml
chapt1_ws/src/python_face_service/: package.xml  setup.cfg  setup.py
chapt1_ws/src/python_face_service/launch/: service.launch.py
chapt1_ws/src/python_face_service/python_face_service/: face_detect_client_node.py  face_detect_node.py
chapt2_ws/: novel1.txt  novel2.txt  novel3.txt  novel4.txt  novel5.txt  novel6.txt  novel7.txt  novel8.txt  novel9.txt
chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  novel_pub_node.py  novel_sub_node.py  person_node.py  ros2_python_node.py
chapt3_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3_ws/src/status_publisher/: package.xml  setup.py
chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt5_ws/src/demo_python_tf/: package.xml  setup.py
chapt5_ws/src/face_detection/: package.xml  setup.py
chapt6_ws/src/turtlesim_topic/: CMakeLists.txt  package.xml
chapt7_ws/src/charge_interfaces/: CMakeLists.txt  package.xml
chapt7_ws/src/charge_interfaces/action/: Charge.action
chapt7_ws/src/charge_station_py/: package.xml  setup.cfg  setup.py
chapt7_ws/src/charge_station_py/charge_station_py/: charge_action_client.py  charge_action_server.py
(+20 files in other folders)
