<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>charge_station_py</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="3031484694@qq.com">tuxinchang</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>charge_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
